stop actions cuz the source is not updating.

--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,8 +1,8 @@
 name: Update
 
 on:
-  schedule:
-    - cron:  '15 8 */7 * *'
+  # schedule:
+  #   - cron:  '15 8 */7 * *'
   workflow_dispatch:
 
 jobs:
